# stock_market_monte_carlo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
examples/: CMakeLists.txt  benchmark_mc_cpu.cpp  benchmark_mc_cpu_v2.cpp  benchmark_mc_gpu.cpp  benchmark_mc_gpu_google.cpp  benchmark_mc_gpu_reduceBlock.cpp  benchmark_reduce_mean.cpp  example_gpu.cpp  example_imgui.cpp  google_benchmark_mc_gpu.cpp  gui.cpp  gui_simulated.cpp  gui_simulated_gpu.cpp  gui_simulated_gpu_reduceBlock.cpp  gui_simulated_v2.cpp  monte_carlo_historical.cpp  monte_carlo_simulated.cpp  visualize_distribution.cpp  visualize_returns_cpu.cpp  visualize_returns_cpu_v2.cpp  visualize_returns_distribution_gpu_reduceBlock.cpp  visualize_returns_gpu.cpp  visualize_rng.cpp
executables/: benchmark_mc_cpu  benchmark_mc_gpu_bs256_v1  benchmark_mc_gpu_bs256_v3  benchmark_mc_gpu_bs256_v4  benchmark_mc_gpu_bs256_v4_noshmem  benchmark_mc_gpu_bs256_v5  benchmark_mc_gpu_bs256_v6
include/: helpers.h  simulations.h
include/sobol/: README.md  demo  demo.cpp  sobol.cpp  sobol.hpp
include/sobol_joekuo/: demo.cpp
include/stock_market_monte_carlo/: gpu.h  helpers.h  simulations.h
profiling/: bench1.json  bench2_shared_curand.json  bench3_shared_hybridTaus.json  bench3_shared_hybridTaus_restricted.json  howto.sh  v6_pcg_loadTotalsShmem
python/: benchmark_compare.py  get_data.py  plot_returns.py  requirements.txt
samples/: CMakeLists.txt  example_historical.cpp  example_simulated.cpp
src/: CMakeLists.txt  gpu.cpp  gpu.cu  helpers.cpp  simulations.cpp  simulations.cu  tmp.cpp
